# rust-slices

./: Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yaml
hack/: Cargo.toml
hack/src/: lib.rs
src/: lib.rs
