[package]
name = "slices"
version = "0.1.0"
authors = ["Boyu Yang <yangby@cryptape.com>"]
edition = "2018"
description = "Convert string literals to static unsigned integer slices in compile time."
homepage = "https://github.com/yangby-cryptape/rust-slices"
repository = "https://github.com/yangby-cryptape/rust-slices"
keywords = ["hex", "decode", "deserialize"]
categories = ["development-tools", "encoding", "parsing"]
license = "Apache-2.0 OR MIT"

[dependencies]
hack = { package = "slices-hack", version = "=0.1.0", path = "hack" }
proc-macro-hack = "~0.5"

[badges]
travis-ci = { repository = "yangby-cryptape/rust-slices" }
