[package]
name = "slices"
version = "0.2.0"
authors = ["Boyu Yang <yangby@cryptape.com>"]
edition = "2018"
description = "Convert string literals to static unsigned integer slices in compile time."
homepage = "https://github.com/yangby-cryptape/rust-slices"
repository = "https://github.com/yangby-cryptape/rust-slices"
keywords = ["hex", "decode", "deserialize"]
categories = ["development-tools::procedural-macro-helpers", "encoding", "parsing"]
license = "Apache-2.0 OR MIT"
readme = "README.md"
include = ["src/**/*.rs", "README.md", "LICENSE-*"]

[lib]
proc-macro = true

[dependencies]
syn = "1.0.73"
quote = "1.0.9"
proc-macro2 = "1.0.27"
faster-hex = "0.6.0"
